# my_portfolio_api

./: .gitignore  Pulumi.yaml  README.md  __main__.py  com.github.UlisesAlexanderAM.job_hunting_helper.json  database.py  jobs.py  meson.build  pyproject.toml  skills.py  user_stories_for_v1.md
app/: crud.py  dependencies.py  main.py
app/config/: database.py  test_database.py
app/data/: crud.py  dependencies.py
app/database/: database.py  database_test_config.py  databate_test.py  test_database.py
app/models/: models.py  schemas.py
app/routers/: jobs.py  skills.py
app/tests/: test_crud.py  test_routes.py
data/: com.github.UlisesAlexanderAM.job_hunting_helper.appdata.xml.in  com.github.UlisesAlexanderAM.job_hunting_helper.desktop.in  com.github.UlisesAlexanderAM.job_hunting_helper.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: database.py  job_hunting_helper.gresource.xml  job_hunting_helper.in  main.py  meson.build  window.py  window.ui
