[tool.poetry]
name = "my_portfolio_api"
version = "0.1.0"
description = ""
authors = [
    "Ulises Alexander Arguelles Monjaraz <30351520+UlisesAlexanderAM@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
pydantic = "^2.1.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic-settings = "^2.0.2"
beanie = "^1.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
ruff = "^0.0.270"
httpx = "^0.24.1"
bump-pydantic = "^0.6.1"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "W", "N", "D", "B", "Q", "C90", "ICN", "TID", "PL", "RUF"]
ignore = ["E501", "D407"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
